HOTFIX: fixed article overflow

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -150,8 +150,9 @@ main {
 
 article {
   color: $text-color;
-  grid-column: 2/3;
+  grid-column: 2;
   margin: 0 auto;
   max-width: 900px;
   padding: 30px;
+  width: 100%;
 }
